# crossword_online

./: .gitignore  Cargo.toml
backend/: Cargo.toml  build_file.rs
backend/src/: main.rs
common/: Cargo.toml
frontend/: Cargo.toml  index.html
frontend/src/: main.rs
frontend/src/components/: crossword_component.rs  mod.rs  playground_children_components.rs  playground_component.rs  word_component.rs
frontend/src/utils/: color_rgba.rs  mod.rs  settings.rs  weak_component_link.rs
